[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/images/updated/game3_bgboard.png" type="Texture" id=1]
[ext_resource path="res://assets/images/updated/game3_bg1.png" type="Texture" id=2]
[ext_resource path="res://mole.tscn" type="PackedScene" id=3]
[ext_resource path="res://game.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/NotoSansTC-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/updated/game3_lv1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/game3_time.png" type="Texture" id=7]
[ext_resource path="res://assets/images/game3_instruction.png" type="Texture" id=8]
[ext_resource path="res://assets/images/updated/game3_score.png" type="Texture" id=9]
[ext_resource path="res://assets/images/updated/green_box.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CountDown/TimeLabel:custom_fonts/font:font_data")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slide_down"
tracks/0/type = "value"
tracks/0/path = NodePath("GameLevel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 152, -100 ), Vector2( 152, 127 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hints:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1301.09, -100 ), Vector2( 1301.09, 127 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CountDown:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 764.691, -100 ), Vector2( 764.691, 127.25 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Score:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 418.375, -100 ), Vector2( 418.375, 126.5 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
resource_name = "PopUp"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="GameRoot" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 968, 728 )
scale = Vector2( 0.947008, 0.947008 )
texture = ExtResource( 2 )

[node name="DecorationContainer" type="Node2D" parent="."]

[node name="board" type="Sprite" parent="DecorationContainer"]
position = Vector2( 211, 608 )
scale = Vector2( 0.847736, 0.847736 )
texture = ExtResource( 1 )

[node name="MolesContainer" type="Node2D" parent="."]
visible = false

[node name="Mole" parent="MolesContainer" instance=ExtResource( 3 )]
position = Vector2( 376, 288 )

[node name="Mole2" parent="MolesContainer" instance=ExtResource( 3 )]
position = Vector2( 948, 916 )

[node name="Mole3" parent="MolesContainer" instance=ExtResource( 3 )]
position = Vector2( 1416, 256 )

[node name="Mole4" parent="MolesContainer" instance=ExtResource( 3 )]
position = Vector2( 888, 312 )

[node name="Mole5" parent="MolesContainer" instance=ExtResource( 3 )]
position = Vector2( 352, 872 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="GameCountDown" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="MolesContainer_lv1" type="Node2D" parent="."]

[node name="Mole2" parent="MolesContainer_lv1" instance=ExtResource( 3 )]
position = Vector2( 948, 916 )

[node name="Mole4" parent="MolesContainer_lv1" instance=ExtResource( 3 )]
position = Vector2( 888, 312 )

[node name="Mole5" parent="MolesContainer_lv1" instance=ExtResource( 3 )]
position = Vector2( 352, 864 )

[node name="ScoreContainer" type="Node2D" parent="."]

[node name="GameLevel" type="Sprite" parent="ScoreContainer"]
position = Vector2( 152, -100 )
texture = ExtResource( 6 )

[node name="CountDown" type="Sprite" parent="ScoreContainer"]
position = Vector2( 764.691, -100 )
scale = Vector2( 0.905612, 0.905612 )
texture = ExtResource( 7 )

[node name="TimeLabel" type="Label" parent="ScoreContainer/CountDown"]
anchor_left = -0.196682
anchor_right = 0.175355
margin_left = -16.0
margin_top = -20.0
margin_right = 93.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="Sprite" parent="ScoreContainer"]
position = Vector2( 418.375, -100 )
scale = Vector2( 0.905556, 0.905556 )
texture = ExtResource( 9 )

[node name="ScoreLabel" type="Label" parent="ScoreContainer/Score"]
anchor_left = -0.414414
anchor_right = 0.159159
margin_left = -16.0
margin_top = -20.0
margin_right = 93.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Hints" type="Sprite" parent="ScoreContainer"]
position = Vector2( 1301.09, -100 )
scale = Vector2( 0.922222, 0.922222 )
texture = ExtResource( 8 )

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="ScoreContainer"]
anims/RESET = SubResource( 3 )
anims/Slide_down = SubResource( 2 )

[node name="AnswerAnimation" type="Node2D" parent="."]
visible = false
position = Vector2( -616, 71 )

[node name="Box" type="Sprite" parent="AnswerAnimation"]
position = Vector2( 1584, 688 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="AnswerAnimation"]
margin_left = 1468.0
margin_top = 639.0
margin_right = 1715.0
margin_bottom = 727.0
custom_fonts/font = SubResource( 4 )
text = "答對了！"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnswerAnimation"]
anims/PopUp = SubResource( 5 )
